# ai-api-mcp

./: .env.example  .gitignore  .npmignore  .npmrc.txt  CONTRIBUTING.md  Dockerfile  README.md  claude_mcp_config.json  cli.js  demo_success.py  docker-compose.yml  install.sh  mcp_config_example.json  package-lock.json  package.json  pyproject.toml  quick_test.py  run.js  run.sh  test_providers_comprehensive.py  test_results_summary.md  test_server.py
.github/workflows/: publish.yml  test.yml
docs/: API.md  EXAMPLES.md  MCP_INSTALLATION_GUIDE.md  QUICKSTART.md  TROUBLESHOOTING.md
src/: __init__.py  models.py  provider_manager.py  server.py  utils.py
src/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  grok_provider.py  openai_provider.py
